mail sender impl, report service, user delete bug fix, improvements